# codex-shim

./: .gitignore  AUDIT_CONTRACTS.md  AUDIT_MANIFEST.md  AUDIT_PROMPT.md  CHANGELOG.md  CONTRIBUTING.md  GOAL.md  Launch Codex-Shim.bat  README.md  launch.ps1  pyproject.toml
codex-desktop-decompiled/: .gitignore  CODEX_SHIM_ARCHITECTURE.md  README.md
codex_shim/: access_log.py  anthropic_messages_gateway.py  auto_router_service.py  capabilities.py  catalog.py  cli.py  codex_config.py  compact.py  compact_frontier.py  cursor_acp.py  cursor_cli.py  cursor_parity.py  cursor_passthrough.py  cursor_passthrough_handlers.py  debug_dump.py  desktop_app_server_contract.py  desktop_contract.py  desktop_decompiled.py  desktop_validate.py  errors.py  image_gate.py  integration_harness.py  migrate.py  opencode_go.py  passthrough.py  passthrough_prepare.py  passthrough_upstream.py  patch_specs.py  picker.py  probe.py  response_store.py  responses_request.py  responses_ws.py  router.py  server.py  settings.py  smoke.py  streaming.py  subscription_catalog.py  thinking.py  (+3 more)
docs/: AUTO_ROUTER.md  CATALOG_COMPATIBILITY.md  CURSOR_AGENT_SIGNATURE_PARITY.md  CURSOR_UPSTREAM_PARITY_RUNBOOK.md  DESKTOP_INFERENCE_MAP.md  DOWNSTREAM_PARITY.md  MODULAR_ARCHITECTURE.md  subscription-integration.md
migrations/: 0001_initial.sql
scripts/: capture_cli_upstream_parity.py  capture_cli_upstream_scenarios.json  capture_cli_upstream_scenarios.py  capture_cli_upstream_scenarios.yaml  capture_cursor_upstream_mitm.py  capture_cursor_upstream_parity.py  capture_desktop_upstream_mitm.py  capture_runbook.md  capture_s11_mitm.py  capture_upstream_parity.py  capture_upstream_scenarios.py  capture_upstream_scenarios.yaml  check_desktop_patch_needles.py  check_module_boundaries.py  codex-shim-install-cursor-composer  codex_desktop_control.py  compare_codex_passthrough.py  compare_shim_cursor_flow.py  cursor_agent_live_smoke.py  cursor_agent_signature_dump.py  cursor_connect_decode.py  cursor_delegate_verify.py  cursor_inference_parity.py  decode_cursor_upstream_run.py  desktop_re_common.py  diff_captures.py  diff_cursor_upstream_capture.py  diff_upstream_capture.py  export_captured_fixtures.py  extract_app_server_schemas.py  generate_app_server_method_index.py  generate_desktop_app_server_contract.py  generate_desktop_contract.py  ingest_har.py  inventory_desktop_bundle.py  mine_desktop_electron.py  preflight.sh  record_s11_workspace_capture.py  record_shim_wire_captures.py  sanitize_upstream_capture.py  (+2 more)
tests/: conftest.py  test_anthropic_messages_bridge.py  (+62 more)
(+10560 files in other folders)
