[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-shim"
version = "0.1.0"
description = "Local all-model BYOK shim for Codex Desktop and CLI."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "0xSero" }]
maintainers = [{ name = "jroth1111" }]
keywords = ["codex", "byok", "openai", "anthropic", "responses-api", "model-routing"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "aiohttp>=3.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  # Pinned so CI and local lint/type gates can't drift on rule changes.
  "ruff==0.15.13",
  "pyright==1.1.410",
]

[project.urls]
Homepage = "https://github.com/jroth1111/codex-shim"
Repository = "https://github.com/jroth1111/codex-shim"
Issues = "https://github.com/jroth1111/codex-shim/issues"
Upstream = "https://github.com/0xSero/codex-shim"

[project.scripts]
codex-shim = "codex_shim.cli:_entrypoint"

[tool.pyright]
typeCheckingMode = "basic"
pythonVersion = "3.11"
include = ["codex_shim"]
exclude = [
  # Migration ratchet: each extraction phase's definition-of-done includes
  # removing its file(s) from this list. The list must only ever shrink.
  "codex_shim/providers/cursor_agent/proto_wire.py", # typed during phase 10
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B"]
ignore = [
  "E501", # long literals/URLs; formatter territory, revisit after the modular migration
  "B009", # deliberate getattr/setattr string-literal pattern: the request-attribute
  "B010", # channel (_codex_shim_*) dodges static attribute checks on aiohttp objects
]

[tool.ruff.lint.per-file-ignores]
# sys.path bootstrap before imports; intentional
"codex_shim/cli.py" = ["E402"]
"scripts/desktop_re_common.py" = ["E402"]
"tests/fixtures/upstream/build_cli_synthetic.py" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["codex_shim"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
  "live: real daemon + upstream integration (requires CODEX_SHIM_LIVE=1)",
  "tier_a: ChatGPT passthrough live tests",
]
